--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/game_FireFly_Web.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/game_FireFly_Web.data.br",
-        frameworkUrl: buildUrl + "/game_FireFly_Web.framework.js.br",
-        codeUrl: buildUrl + "/game_FireFly_Web.wasm.br",
+        dataUrl: buildUrl + "/game_FireFly_Web.data",
+        frameworkUrl: buildUrl + "/game_FireFly_Web.framework.js",
+        codeUrl: buildUrl + "/game_FireFly_Web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Coonie",
         productName: "FireFly",
